tests/semantic_cases/invalid/qualified_call_unknown_alias.ob0
(* INVALID: unknown module aliases must fail semantic resolution *)
MODULE Main;
IMPORT B := ModuleB;
BEGIN
    C.HELLO()
END Main.
